Add 'On Air' mode #15, and refactoring

--- a/settings.html
+++ b/settings.html
@@ -160,6 +160,7 @@
                         <option value="@">Normal</option>
                         <option value="@">Preview stay on</option>
                         <option value="@">Program only</option>
+                        <option value="@">On Air</option>
                     </select>
                 </td>
             </tr>
@@ -170,6 +171,7 @@
                         <option value="@">Normal</option>
                         <option value="@">Preview stay on</option>
                         <option value="@">Program only</option>
+                        <option value="@">On Air</option>
                     </select>
                 </td>
             </tr>
