Documentation and copyright notice update

--- a/settings.html
+++ b/settings.html
@@ -64,9 +64,15 @@
     }
 </script>
 
+<style>
+    a {
+        color: #0F79E0
+    }
+</style>
+
 <body style="font-family:Verdana; white-space:nowrap;" onload="load()">
     <table cellpadding="2" style="width:100%">
-        <tr bgcolor="#777777" style="color:#ffffff;font-size:12px;">
+        <tr bgcolor="#777777" style="color:#ffffff;font-size:.8em;">
             <td colspan="3">
                 <h1>&nbsp;Tally Light setup</h1>
                 <h2>&nbsp;Status:</h2>
@@ -129,7 +135,7 @@
         <tr>
             <td><br></td>
         </tr>
-        <tr bgcolor="#777777" style="color:#ffffff;font-size:12px;">
+        <tr bgcolor="#777777" style="color:#ffffff;font-size:.8em;">
             <td colspan="3">
                 <h2>&nbsp;Settings:</h2>
             </td>
@@ -287,6 +293,13 @@
                 </td>
             </tr>
         </form>
+        <td><br></td>
+        <tr bgcolor="#cccccc" style="font-size:.8em;">
+            <td colspan="3">
+                <p>&nbsp;&copy; 2021 <a href="https://aronhetlam.github.io/">Aron N. Het Lam</a></p>
+                <p>&nbsp;Based on ATEM libraries for Arduino by <a href="https://www.skaarhoj.com/">SKAARHOJ</a></p>
+            </td>
+        </tr>
     </table>
 </body>
 
